# Linux_Course_Project

./: .gitattributes  CMakeLists.txt  Makefile  README.md  build.sh  test_image.ppm  wsl-setup.sh
cpp/: Color.h  FractalDragon.cpp  FractalDragon.h  Framebuffer.cpp  Framebuffer.h  Geometry.h  Line.cpp  Line.h  Point.h  Polyline.cpp  Polyline.h  main.cpp
docs/: BUILD_SUCCESS.md  README_CMAKE.md
prac/: main.tex  make.bat  make.sh
prac/style/: zsccode.sty  zscexample.sty  zscthesis.cfg  zscthesis.cls
prac/tex/: evaluation.tex  frontinfo.tex  prac-note.tex  prac-plan.tex  prac-sum.tex
src/: main.cpp
src/core/: Color.h  Framebuffer.cpp  Framebuffer.h  Geometry.h
src/graphics/: Image.cpp  Image.h
src/graphics/fractals/: FractalDragon.cpp  FractalDragon.h
src/graphics/games/: BubbleSort.cpp  BubbleSort.h  Food.cpp  Food.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h
src/graphics/shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h  OlympicRings.cpp  OlympicRings.h  Polyline.h
